casi hecho la parte de que se vea bien al girar el movil

--- a/app/src/main/res/layout-land/activity_empresa_registro.xml
+++ b/app/src/main/res/layout-land/activity_empresa_registro.xml
@@ -11,7 +11,8 @@
         android:id="@+id/edtRENombre"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="104dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="112dp"
         android:ems="10"
         android:hint="Nombre de empresa"
         android:inputType="textPersonName"
