--- a/app/src/main/res/layout-land/fragment_detalle_productos_publicados.xml
+++ b/app/src/main/res/layout-land/fragment_detalle_productos_publicados.xml
@@ -27,7 +27,7 @@
 
         <LinearLayout
             android:layout_width="266dp"
-            android:layout_height="205dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
             android:layout_marginTop="100dp"
             android:orientation="vertical">
