falta poner boton de busqueda

--- a/app/src/main/res/layout/fragment_productos_publicados.xml
+++ b/app/src/main/res/layout/fragment_productos_publicados.xml
@@ -6,6 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".UI.ProductosPublicadosFragment" >
 
+    <fragment
+        android:id="@+id/buscador"
+        android:name="com.proyectofct.salinappservice.UI.BuscadorFragment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
     <TextView
         android:id="@+id/textView18"
         android:layout_width="match_parent"
@@ -15,9 +23,10 @@
         android:textAlignment="center"
         android:textSize="30sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
+
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/buscador"/>
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvProductosPublicados"
