--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -33,5 +33,10 @@
         android:name="com.proyectofct.salinappservice.UI.EditarInfoEmpresasFragment"
         android:label="fragment_editar_info_empresas"
         tools:layout="@layout/fragment_editar_info_empresas" />
+    <fragment
+        android:id="@+id/nav_fragment_detalle_grupo_productos_publicados"
+        android:name="com.proyectofct.salinappservice.UI.DetalleGrupoProductosPublicadosFragment"
+        android:label="fragment_detalle_grupo_productos_publicados"
+        tools:layout="@layout/fragment_detalle_grupo_productos_publicados" />
 
 </navigation>
