--- a/app/src/main/res/layout/fragment_editar_info_empresas.xml
+++ b/app/src/main/res/layout/fragment_editar_info_empresas.xml
@@ -1,85 +1,124 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UI.EditarInfoEmpresasFragment" >
+    android:orientation="vertical"
+    tools:context=".UI.EditarInfoEmpresasFragment">
 
     <TextView
         android:id="@+id/txt_titulo_editInfoE"
         android:layout_width="match_parent"
-        android:layout_height="136dp"
+        android:layout_height="108dp"
         android:gravity="center"
         android:paddingTop="40dp"
         android:paddingBottom="30dp"
         android:text="@string/txt_titulo_editInfoE"
-        android:textColor="@color/black"
+        android:textColor="#2bab63"
         android:textSize="30sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"/>
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/img_logo_editInfoE"
         android:layout_width="match_parent"
         android:layout_height="158dp"
-        android:maxWidth="100sp"
-        android:maxHeight="100sp"
-        android:src="@color/fondo"
-        app:civ_border_overlay="true"
-        android:requestLegacyExternalStorage="true"
-        app:civ_border_width="1sp" />
+        android:src="#2bab63"/>
+
+    <View
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"/>
 
     <EditText
         android:id="@+id/edt_nombre_editInfoE"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:autofillHints=""
         android:background="@drawable/style_edt"
         android:hint="@string/edt_nombre_editInfoE"
-        android:inputType="text"
-        android:textColor="@color/black"
-        android:textColorHint="@color/black" />
+        android:importantForAutofill="no"
+        android:inputType="text" />
+
+    <View
+        android:id="@+id/divider2"
+        android:layout_width="match_parent"
+        android:layout_height="10dp"/>
 
     <EditText
-        android:id="@+id/edt_localizacion_editInfoE"
+        android:id="@+id/edt_direccion_editInfoE"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:background="@drawable/style_edt"
-        android:ems="10"
-        android:hint="@string/edt_localizacion_editInfoE"
+        android:hint="@string/edt_direccion_editInfoE"
         android:importantForAutofill="no"
-        android:inputType="textPersonName"
-        android:textColor="@color/black"
-        android:textColorHint="@color/black" />
+        android:inputType="text" />
+
+    <View
+        android:id="@+id/divider3"
+        android:layout_width="match_parent"
+        android:layout_height="10dp"/>
 
     <EditText
         android:id="@+id/edt_CIF_editInfoE"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:autofillHints=""
         android:background="@drawable/style_edt"
-        android:ems="10"
-        android:hint="Resumen"
-        android:inputType="textPersonName"
-        android:textColor="@color/black"
-        android:textColorHint="@color/black" />
+        android:hint="@string/edt_CIF_editInfoE"
+        android:importantForAutofill="no"
+        android:inputType="text" />
+
+    <View
+        android:id="@+id/divider4"
+        android:layout_width="match_parent"
+        android:layout_height="10dp"/>
 
     <EditText
-        android:id="@+id/edt_sector"
+        android:id="@+id/edt_sector_editInfoE"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="10sp"
-        android:autofillHints=""
         android:background="@drawable/style_edt"
-        android:ems="10"
-        android:hint="Sector"
-        android:inputType="textPersonName"
-        android:textColor="@color/black"
-        android:textColorHint="@color/black" />
+        android:hint="@string/edt_sector_editInfoE"
+        android:importantForAutofill="no"
+        android:inputType="text" />
+
+    <View
+        android:id="@+id/divider5"
+        android:layout_width="match_parent"
+        android:layout_height="10dp"/>
+
+    <EditText
+        android:id="@+id/edt_codEmpr_editInfoE"
+        android:layout_width="350dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/style_edt"
+        android:hint="@string/edt_codEmpr_editInfoE"
+        android:importantForAutofill="no"
+        android:inputType="text" />
+
+    <View
+        android:id="@+id/divider6"
+        android:layout_width="match_parent"
+        android:layout_height="10dp"/>
+
+    <EditText
+        android:id="@+id/edt_resumen_editInfoE"
+        android:layout_width="350dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/style_edt"
+        android:hint="@string/edt_resumen_editInfoE"
+        android:importantForAutofill="no"
+        android:inputType="text" />
+
+    <View
+        android:id="@+id/divider7"
+        android:layout_width="match_parent"
+        android:layout_height="20dp"/>
 
     <Button
         android:id="@+id/btn_editar_editInfoE"
@@ -89,10 +128,10 @@
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
         android:text="@string/btn_editar_editInfoE"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textStyle="bold"
-        app:backgroundTint="@color/fondo"
+        app:backgroundTint="#2bab63"
         app:cornerRadius="30dp" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
