--- a/app/src/main/res/layout/fragment_empresas.xml
+++ b/app/src/main/res/layout/fragment_empresas.xml
@@ -21,7 +21,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.526"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fragment" />
+        app:layout_constraintTop_toBottomOf="@+id/rv_empresas" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_empresas"
