--- a/app/src/main/res/layout/fragment_detalle_grupo_productos_publicados.xml
+++ b/app/src/main/res/layout/fragment_detalle_grupo_productos_publicados.xml
@@ -160,6 +160,24 @@
             android:layout_marginLeft="55dp"
             android:layout_marginTop="400dp" />
 
+        <Button
+            android:id="@+id/btAñadirAlCarrito"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="75dp"
+            android:layout_marginTop="625dp"
+            android:text="@string/añadir_al_carrito"
+            android:textColor="@color/black"
+            android:textStyle="bold" />
+
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="275dp"
+            android:layout_marginTop="625dp"
+            android:contentDescription="@string/imagencarrito"
+            android:src="@drawable/carrito" />
+
     </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
