Falta hacer que el boton de buscar funcione y cambiar metodo de buscar que sea por un array de palabras en vez de solo por marca

--- a/app/src/main/res/layout-land/activity_login.xml
+++ b/app/src/main/res/layout-land/activity_login.xml
@@ -11,7 +11,7 @@
         android:id="@+id/edtLUsuario"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="8dp"
         android:autofillHints="activity_login"
         android:background="@drawable/style_edt"
         android:ems="10"
@@ -20,9 +20,8 @@
         android:textColor="@color/black"
         android:textColorHint="@color/black"
         android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="@+id/textView2"
-        app:layout_constraintStart_toStartOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        tools:layout_editor_absoluteX="48dp" />
 
     <EditText
         android:id="@+id/edtLContraseña"
@@ -46,17 +45,14 @@
         android:id="@+id/btLIniciarS"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
         android:onClick="inciarSesión"
         android:text="@string/inciar_sesion"
         android:textColor="@color/black"
         android:textSize="24sp"
         app:backgroundTint="@color/fondo"
         app:cornerRadius="20dip"
-        app:layout_constraintEnd_toEndOf="@+id/txtRecordarContraseña"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/txtRecordarContraseña"
-        app:layout_constraintTop_toBottomOf="@+id/txtRecordarContraseña" />
+        tools:layout_editor_absoluteX="425dp"
+        tools:layout_editor_absoluteY="116dp" />
 
     <TextView
         android:id="@+id/txtRecordarContraseña"
@@ -112,13 +108,13 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="16dp"
         android:text="@string/inicio"
         android:textColor="@color/black"
         android:textSize="36sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.499"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
