--- a/app/src/main/res/layout/fragment_productos_publicados.xml
+++ b/app/src/main/res/layout/fragment_productos_publicados.xml
@@ -6,32 +6,71 @@
     android:layout_height="match_parent"
     tools:context=".UI.ProductosPublicadosFragment" >
 
-    <fragment
-        android:id="@+id/buscador"
-        android:name="com.proyectofct.salinappservice.UI.BuscadorFragment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <RelativeLayout
+        android:id="@+id/relativeLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <EditText
+            android:id="@+id/buscar_producto"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="5dp"
+            android:autofillHints="@string/buscar"
+            android:hint="@string/buscar"
+            android:inputType="text" />
+
+        <ImageButton
+            android:id="@+id/btn_buscar"
+            android:layout_width="86dp"
+            android:layout_height="50dp"
+            android:layout_alignTop="@+id/buscar_producto"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="-5dp"
+            android:layout_marginEnd="47dp"
+            android:layout_marginRight="10dp"
+            android:layout_toStartOf="@+id/buscar_producto"
+            android:contentDescription="@string/imagenbuscar"
+            android:onClick="BuscarProducto"
+            android:scaleType="centerInside"
+            android:src="@drawable/lupa" />
+
+        <ImageButton
+            android:id="@+id/btn_carrito_compra"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignTop="@+id/buscar_producto"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="-5dp"
+            android:layout_toStartOf="@+id/btn_buscar"
+            android:contentDescription="@string/imagencarrito"
+            android:scaleType="centerInside"
+            android:src="@drawable/carrito" />
+
+    </RelativeLayout>
+
+
     <TextView
         android:id="@+id/textView18"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10sp"
+        android:layout_marginTop="64dp"
         android:text="@string/lista_de_productos_publicados"
         android:textAlignment="center"
+
         android:textSize="30sp"
         android:textStyle="bold"
-
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buscador"/>
-
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvProductosPublicados"
         android:layout_width="383dp"
-        android:layout_height="592dp"
+        android:layout_height="500dp"
         android:layout_margin="10dp"
         android:layout_marginTop="32dp"
         app:layout_constraintEnd_toEndOf="parent"
