--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -46,5 +46,10 @@
         android:name="com.proyectofct.salinappservice.UI.DetalleGrupoProductosPublicadosFragment"
         android:label="@string/productos_publicados"
         tools:layout="@layout/fragment_detalle_grupo_productos_publicados" />
+    <fragment
+        android:id="@+id/nav_fragment_reservas"
+        android:name="com.proyectofct.salinappservice.UI.ReservasFragment"
+        android:label="RESERVAS"
+        tools:layout="@layout/fragment_reservas" />
 
 </navigation>
