--- a/app/src/main/res/layout/spinner_tallas_color_item.xml
+++ b/app/src/main/res/layout/spinner_tallas_color_item.xml
@@ -7,6 +7,7 @@
     <TextView
         android:id="@+id/txtSpinnerTallaColor"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:layout_height="30dp"
+        android:text="TextView"
+        android:textSize="20sp" />
 </LinearLayout>
