--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -52,4 +52,10 @@
         android:label="RESERVAS"
         tools:layout="@layout/fragment_reservas" />
 
+    <fragment
+        android:id="@+id/nav_fragment_completar_perfil"
+        android:name="com.proyectofct.salinappservice.UI.CompletarPerfilUsuarioFragment"
+        android:label="COMPLETAR PERFIL USUARIO"
+        tools:layout="@layout/fragment_completar_perfil_usuario" />
+
 </navigation>
