--- a/app/src/main/res/layout-land/fragment_editar_info_empresas.xml
+++ b/app/src/main/res/layout-land/fragment_editar_info_empresas.xml
@@ -10,286 +10,154 @@
     <TextView
         android:id="@+id/txt_titulo_editInfoE"
         android:layout_width="match_parent"
-
-        android:layout_height="136dp"
-
+        android:layout_height="108dp"
         android:gravity="center"
         android:paddingTop="40dp"
         android:paddingBottom="30dp"
         android:text="@string/txt_titulo_editInfoE"
-        android:textColor="@color/black"
+        android:textColor="#2bab63"
         android:textSize="30sp"
-
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textStyle="bold"/>
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/img_logo_editInfoE"
-        android:layout_width="158dp"
-        android:layout_height="113dp"
-        android:layout_marginStart="-400dp"
-        android:layout_marginTop="150dp"
+        android:layout_width="match_parent"
+        android:layout_height="158dp"
         android:maxWidth="100sp"
         android:maxHeight="100sp"
         android:requestLegacyExternalStorage="true"
         android:src="@color/fondo"
+
         app:civ_border_overlay="true"
         app:civ_border_width="1sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        tools:layout_editor_absoluteY="110dp" />
+
+    <View
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"/>
+
 
     <EditText
         android:id="@+id/edt_nombre_editInfoE"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginStart="300dp"
-        android:layout_marginTop="100dp"
-        android:autofillHints="@string/nombre"
         android:background="@drawable/style_edt"
         android:hint="@string/edt_nombre_editInfoE"
+        android:importantForAutofill="no"
         android:inputType="text"
         android:textColor="@color/black"
-        android:textColorHint="@color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textColorHint="@color/black" />
+
+    <View
+        android:id="@+id/divider2"
+        android:layout_width="match_parent"
+        android:layout_height="10dp" />
 
     <EditText
-        android:id="@+id/edt_localizacion_editInfoE"
+        android:id="@+id/edt_direccion_editInfoE"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginStart="300dp"
-        android:layout_marginTop="32dp"
         android:background="@drawable/style_edt"
-        android:ems="10"
-        android:hint="Localización"
+        android:hint="@string/edt_direccion_editInfoE"
         android:importantForAutofill="no"
         android:inputType="textPersonName"
         android:textColor="@color/black"
-        android:textColorHint="@color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edt_nombre_editInfoE" />
+        android:textColorHint="@color/black" />
+
+    <View
+        android:id="@+id/divider3"
+        android:layout_width="match_parent"
+        android:layout_height="10dp" />
 
     <EditText
         android:id="@+id/edt_CIF_editInfoE"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="32dp"
-        android:autofillHints="@string/edt_CIF_editInfoE"
         android:background="@drawable/style_edt"
-        android:ems="10"
-        android:hint="Resumen"
+        android:hint="@string/edt_CIF_editInfoE"
+        android:importantForAutofill="no"
         android:inputType="textPersonName"
         android:textColor="@color/black"
-        android:textColorHint="@color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.902"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edt_sector" />
+        android:textColorHint="@color/black" />
+
+    <View
+        android:id="@+id/divider4"
+        android:layout_width="match_parent"
+        android:layout_height="10dp" />
 
     <EditText
-        android:id="@+id/edt_sector"
+        android:id="@+id/edt_sector_editInfoE"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginStart="300dp"
-        android:layout_marginTop="32dp"
-        android:autofillHints="@string/sector"
         android:background="@drawable/style_edt"
-        android:ems="10"
-        android:hint="Sector"
+        android:hint="@string/edt_sector_editInfoE"
+        android:importantForAutofill="no"
         android:inputType="textPersonName"
         android:textColor="@color/black"
-        android:textColorHint="@color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edt_localizacion_editInfoE" />
+        android:textColorHint="@color/black" />
+
+    <View
+        android:id="@+id/divider5"
+        android:layout_width="match_parent"
+        android:layout_height="10dp" />
+
+    <EditText
+        android:id="@+id/edt_codEmpr_editInfoE"
+        android:layout_width="350dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/style_edt"
+        android:hint="@string/edt_codEmpr_editInfoE"
+        android:importantForAutofill="no"
+        android:inputType="text"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black" />
+
+    <View
+        android:id="@+id/divider6"
+        android:layout_width="match_parent"
+        android:layout_height="10dp" />
+
+    <EditText
+        android:id="@+id/edt_resumen_editInfoE"
+        android:layout_width="350dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/style_edt"
+        android:hint="@string/edt_resumen_editInfoE"
+        android:importantForAutofill="no"
+        android:inputType="textPersonName"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black" />
+
+    <View
+        android:id="@+id/divider7"
+        android:layout_width="match_parent"
+        android:layout_height="20dp" />
 
     <Button
         android:id="@+id/btn_editar_editInfoE"
         android:layout_width="251dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="32dp"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
         android:text="@string/btn_editar_editInfoE"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textStyle="bold"
+
         app:backgroundTint="@color/fondo"
         app:cornerRadius="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.093"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/img_logo_editInfoE" />
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
-
-        android:textStyle="bold" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
-
-        <LinearLayout
-            android:layout_width="314dp"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/img_logo_editInfoE"
-                android:layout_width="match_parent"
-                android:layout_height="158dp"
-                android:maxWidth="100sp"
-                android:maxHeight="100sp"
-                android:requestLegacyExternalStorage="true"
-                android:src="@color/fondo"
-
-                app:civ_border_overlay="true"
-                app:civ_border_width="1sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                tools:layout_editor_absoluteY="110dp" />
-
-            <View
-                android:id="@+id/divider"
-                android:layout_width="match_parent"
-                android:layout_height="30dp" />
-
-            <Button
-                android:id="@+id/btn_editar_editInfoE"
-                android:layout_width="251dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
-                android:text="@string/btn_editar_editInfoE"
-                android:textColor="@color/white"
-                android:textStyle="bold"
-
-                app:backgroundTint="@color/fondo"
-                app:cornerRadius="30dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.839" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <EditText
-                android:id="@+id/edt_nombre_editInfoE"
-                android:layout_width="350dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:background="@drawable/style_edt"
-                android:hint="@string/edt_nombre_editInfoE"
-                android:importantForAutofill="no"
-                android:inputType="text"
-                android:textColor="@color/black"
-                android:textColorHint="@color/black" />
-
-            <View
-                android:id="@+id/divider2"
-                android:layout_width="match_parent"
-                android:layout_height="5dp" />
-
-            <EditText
-                android:id="@+id/edt_direccion_editInfoE"
-                android:layout_width="350dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:background="@drawable/style_edt"
-                android:hint="@string/edt_direccion_editInfoE"
-                android:importantForAutofill="no"
-                android:inputType="textPersonName"
-                android:textColor="@color/black"
-                android:textColorHint="@color/black" />
-
-            <View
-                android:id="@+id/divider3"
-                android:layout_width="match_parent"
-                android:layout_height="5dp" />
-
-            <EditText
-                android:id="@+id/edt_CIF_editInfoE"
-                android:layout_width="350dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:background="@drawable/style_edt"
-                android:hint="@string/edt_CIF_editInfoE"
-                android:importantForAutofill="no"
-                android:inputType="textPersonName"
-                android:textColor="@color/black"
-                android:textColorHint="@color/black" />
-
-            <View
-                android:id="@+id/divider4"
-                android:layout_width="match_parent"
-                android:layout_height="5dp" />
-
-            <EditText
-                android:id="@+id/edt_sector_editInfoE"
-                android:layout_width="350dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:background="@drawable/style_edt"
-                android:hint="@string/edt_sector_editInfoE"
-                android:importantForAutofill="no"
-                android:inputType="textPersonName"
-                android:textColor="@color/black"
-                android:textColorHint="@color/black" />
-
-            <View
-                android:id="@+id/divider5"
-                android:layout_width="match_parent"
-                android:layout_height="5dp" />
-
-            <EditText
-                android:id="@+id/edt_codEmpr_editInfoE"
-                android:layout_width="350dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:background="@drawable/style_edt"
-                android:hint="@string/edt_codEmpr_editInfoE"
-                android:importantForAutofill="no"
-                android:inputType="text"
-                android:textColor="@color/black"
-                android:textColorHint="@color/black" />
-
-            <View
-                android:id="@+id/divider6"
-                android:layout_width="match_parent"
-                android:layout_height="5dp" />
-
-            <EditText
-                android:id="@+id/edt_resumen_editInfoE"
-                android:layout_width="350dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:background="@drawable/style_edt"
-                android:hint="@string/edt_resumen_editInfoE"
-                android:importantForAutofill="no"
-                android:inputType="textPersonName"
-                android:textColor="@color/black"
-                android:textColorHint="@color/black" />
-        </LinearLayout>
-
-    </LinearLayout>
-
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.839" />
 
 </LinearLayout>
-
