--- a/app/src/main/res/layout-land/activity_bienvenida.xml
+++ b/app/src/main/res/layout-land/activity_bienvenida.xml
@@ -27,8 +27,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:onClick="entrarALaApp"
-        android:text="@string/entrar_ya"
+        android:onClick="loginUsuarios"
+        android:text="@string/loginUsuarios"
         android:textColor="@color/black"
         android:textSize="30sp"
         app:backgroundTint="@color/fondo"
@@ -43,7 +43,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="52dp"
-        android:onClick="inciarSesión"
+        android:onClick="loginEmpresas"
         android:text="@string/empresas"
         android:textColor="@color/black"
         android:textSize="30sp"
